--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,18 +5,15 @@ edition = "2021"
 
 [workspace]
 
-members = [
-    ".",
-    ]
+members = ["."]
 
 
 [dependencies]
 sea-orm = { version = "0.12.3", features = [
     "sqlx-postgres",
-        "runtime-tokio-rustls",
-            "macros",
-                "mock",
-                    "debug-print",
-                    ] }
+    "runtime-tokio-rustls",
+    "macros",
+    "mock",
+    "debug-print",
+] }
 clap = { version = "4.4.6", features = ["derive"] }
-
