--- a/migration/Cargo.toml
+++ b/migration/Cargo.toml
@@ -12,8 +12,5 @@ path = "src/lib.rs"
 async-std = { version = "^1", features = ["attributes", "tokio1"] }
 
 [dependencies.sea-orm-migration]
-version = "^0.10.0"
-features = [
-  "runtime-tokio-rustls",
-  "sqlx-postgres",
-]
+version = "^0.12.0"
+features = ["runtime-tokio-rustls", "sqlx-postgres"]
